--- a/5 - CSS Intermediário/projeto-menu/css/style.css
+++ b/5 - CSS Intermediário/projeto-menu/css/style.css
@@ -47,25 +47,41 @@ body {
     position: relative;
 }
 
+.menu > li:hover {
+    background-color: #1d52ff;
+}
+
 .menu li a {
     padding: 17px;
     color: white;
     font-size: 14px;
     text-decoration: none;
+    display: block;
 }
 
-.menu li a:hover {
-    background-color: #1d52ff;
-}
-
-.menu li:hover .submenu {
+.menu > li:hover > .submenu,
+.submenu > li:hover > .submenu {
     display: block;
 }
 
 .submenu {
     display: none;
     position: absolute;
-    top: 34px;
+    top: 50px;
     left: 0;
     background-color: #1d52ff;
+    min-width: 110%;
+}
+
+.submenu li:hover {
+    background: #1945d4;
+}
+
+.submenu li {
+    position: relative;
+}
+
+.submenu li .submenu {
+    top: 0;
+    left: 100%;
 }
